# semantic_mapping_evaluation

./: .gitignore  README.md  aachen_colmap_sparse.sh  aachen数据集 测评结果.md  colmap_semantic.sh  colmap_semantic_crf.sh  ddh_semantic.sh  vis_point_cloud.py
colmap_db_scripe/: create_db.py  create_db_from_aachen.py  update_db_image_name.py  update_db_intrinsics_from_another_db.py
evaluation/: calculate_error.py
semantic_mask/: demo_test.sh  fusion_with_mask.sh
semantic_mask/convert_sematic_map_to_binary_mask/: CMakeLists.txt  README.md  combine2images.cc  combine2images.py  combine2images.yaml  run.sh
semantic_mask/refine_semantic_crf/: crf.yaml  dense_crf.py
